@@ -358,6 +358,7 @@ static PyTypeObject core_ui_button_t = {
     0,                                        // tp_del
     0,                                        // tp_version_tag
     0,                                        // tp_finalize
+    nullptr,                                  // tp_vectorcall
 };
 
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
