@@ -18,10 +18,12 @@ Mobius Forensic Toolkit 2.19
 	* libmobius_core: Added necessary include to the mediator component
 	* libmobius_core: Removed inheritance from std::iterator in the pod::map component
 	* libmobius_core: Removed unnecessary [[fallthrough]] attributes from vfs::tsk::fs_file module
+	* libmobius_core: Removed memset use from vfs::tsk::adaptor class
 	* libmobius_core: Changed ui::box::operator widget to as_widget()
 	* libmobius_core: Changed ui::button::operator widget to as_widget()
 	* libmobius_core: Changed ui::icon::operator widget to as_widget()
 	* libmobius_core: Changed ui::label::operator widget to as_widget()
+	* libmobius_core: Changed datasource::ufdr::datasource::operator datasource to as_datasource()
 	* libmobius_framework: Added new class case_profile
 	* libmobius_framework: Added new function list_case_profiles
 	* libmobius_framework: Added new class vfs_processor_impl_base
@@ -34,6 +36,14 @@ Mobius Forensic Toolkit 2.19
 	* libmobius_python: Changed framework.ant.run method to release GIL when calling C++
 	* libmobius_python: Added new class framework.ant.vfs_processor
 	* libmobius_python: Changed pymobius.cpp to use PyFrame_GetCode 
+	* libmobius_python: Changed core.ui.box module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.button module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.container module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.icon module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.label module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.message_dialog module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.stacked_container module to set tp_vectorcall
+	* libmobius_python: Changed core.ui.widget module to set tp_vectorcall
 	* tools.hive_info: Changed to use reference in loop
 
 Mobius Forensic Toolkit 2.18
